--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-spring": "^9.7.4",
     "viem": "latest",
     "wagmi": "latest"
   },
